kubernetes/catalog/dozzle/manifests/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dozzle
  namespace: dozzle
  labels:
    app.kubernetes.io/name: dozzle
    infraweaver.io/source: community-apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`dozzle.int.rlservers.com`)
      kind: Rule
      middlewares:
        - name: netbird-vpn-only
          namespace: traefik
      services:
        - name: dozzle
          port: 8080
  tls:
    secretName: int-rlservers-com-tls
